namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: agenda-app
  labels:
    name: agenda-app
