contact-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: contact-service
  namespace: agenda-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: contact-service
  template:
    metadata:
      labels:
        app: contact-service
    spec:
      containers:
        - name: contact-service
          image: agenda/contact-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /q/health/ready
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /q/health/live
              port: 8080
            initialDelaySeconds: 40
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: contact-service
  namespace: agenda-app
spec:
  selector:
    app: contact-service
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
