event-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-service
  namespace: agenda-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-service
  template:
    metadata:
      labels:
        app: event-service
    spec:
      containers:
        - name: event-service
          image: agenda/event-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
          readinessProbe:
            httpGet:
              path: /q/health/ready
              port: 8081
            initialDelaySeconds: 20
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /q/health/live
              port: 8081
            initialDelaySeconds: 30
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: event-service
  namespace: agenda-app
spec:
  selector:
    app: event-service
  ports:
    - port: 8081
      targetPort: 8081
  type: ClusterIP
